shell: rewrite script to run CLARA on the farm
- Use the clara-orchestrator.
- Pass variables as options instead of positional parameters.
  It is easier to track which values are set.
- Use bash signal handling to kill the orchestrator and the DPE.